# openXAE

./: .gitignore  CMakeLists.txt  README.md  library.cpp  library.h
include/: Attribute.hpp  Datatype.hpp  Graph.hpp  MyAllocator.hpp  MyIterator.hpp  MyVector.hpp  Operand.hpp  Operator.hpp  Parameter.hpp  Tensor.hpp  config.hpp  library.h  utils.hpp
include/ir/: expr.h  source_map.h  tensor_type.h  type.h
include/node/: node.h  reflection.h
include/runtime/: Attribute.hpp  Operand.hpp  Operator.hpp  Parameter.hpp  Tensor.hpp
include/runtime/pnnx/: ir.h
src/: Graph.cpp  Tensor.cpp  library.cpp
src/ir/: expr.cpp  tensor_type.cpp  type.cpp
src/node/: reflection.cc
test/: CMakeLists.txt  allocator_test.cpp  armadillo_test.cpp  custom_allocator_test.cpp  tensor_test.cpp  test_main.cpp  vector_test.cpp
tests/: CMakeLists.txt  armadillo_test.cpp
tools/pnnx/: CMakeLists.txt
tools/pnnx/cmake/: PNNXPytorch.cmake
tools/pnnx/converter/: CMakeLists.txt
tools/pnnx/converter/include/: constant_unpooling.h  convert_half_to_float.h  flatten_input.h  inline_block.h  pass_level0.h  reset_device.h  shape_inference.h  torch2pnnx.h  torch_optimization.h
tools/pnnx/converter/include/torch/: pass_level0.h  pass_level1.h  pass_level2.h  torch2pnnx.h  torch_optimization.h
tools/pnnx/converter/src/torch/: constant_unpooling.cpp  convert_half_to_float.cpp  flatten_input.cpp  inline_block.cpp  load_torchscript.cpp  pass_level1.cpp  reset_device.cpp  shape_inference.cpp  torch2pnnx.cpp  torch_optimization.cpp
tools/pnnx/converter/src/torch/pass_level0/: constant_unpooling.cpp  convert_half_to_float.cpp  flatten_input.cpp  inline_block.cpp  pass_level0.cpp  reset_device.cpp  shape_inference.cpp
tools/pnnx/converter/src/torch/pass_level1/: nn_op.cpp  pass_level1.cpp
tools/pnnx/converter/src/torch/pass_level2/: F_relu.cpp  pass_level2.cpp
tools/pnnx/converter/src/torch/pass_level3/: fuse_expression.cpp  fuse_expression.h
tools/pnnx/include/: Attribute.h  Graph.h  Operand.h  Operator.h  Parameter.h  ir.h  storezip.h  utils.h
tools/pnnx/src/: Attribute.cpp  Attribute.h  CMakeLists.txt  Graph.cpp  Graph.h  Operand.h  Operator.h  Parameter.cpp  Parameter.h  datatype.h  ir.cpp  ir.h  load_torchscript.cpp  load_torchscript.h  main.cpp  pass_level0.cpp  pass_level0.h  storezip.cpp  utils.cpp  utils.h
tools/pnnx/src/pass_level0/: inline_block.cpp  inline_block.h
tools/pnnx/tests/: CMakeLists.txt  ir_test.cpp  test_F_relu.py  test_Tensor_select.py  test_Tensor_slice.py  test_Tensor_slice_copy.py  test_inline_block.py  test_main.cpp  test_nn_Conv2d.py
